--- a/html/frontpage/frontpage.html
+++ b/html/frontpage/frontpage.html
@@ -14,8 +14,10 @@
 <body>
     <header>
 
-        <div>
-            <h1>Magic X Logic</h1>
+        <div class="headingTitle">
+            <a href="../index.html">
+                <h1>Magic X Logic</h1>
+            </a>
         </div>
 
         <nav>
@@ -39,13 +41,7 @@
         </nav>
     </header>
 
-    <script>
-        function toggleMenu() {
-            const navMenu = document.getElementById('navMenu');
-            navMenu.classList.toggle('show');
-        }
-    </script>
-
+    <script src="../../javascrip/scripfrontpage.js"></script>
 
     <main>
 
@@ -53,7 +49,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/primerdibujo.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel001.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -70,7 +66,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/filo002.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo002.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -87,7 +83,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/angel002.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel002.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -104,7 +100,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/filo001.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo001.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -121,7 +117,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/angel003.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel003.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -138,25 +134,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/angel004.jpeg" alt="primer-001">
-                </div>
-                <div class="info-001">
-                    <div class="text-001">
-                        <h2>Inmersión Angelical</h2>
-                        <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="painting-001">
-                <div class="paint-001">
-                    <img src="../../imagenes/imgweb/filo003.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel004.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -174,7 +152,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/angel005.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo003.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -192,7 +170,7 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/filo004.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/angel005.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -210,7 +188,25 @@
 
             <div class="painting-001">
                 <div class="paint-001">
-                    <img src="../../imagenes/imgweb/angel006.jpeg" alt="primer-001">
+                    <img src="../../images/imgweb/filo004.jpeg" alt="primer-001">
+                </div>
+                <div class="info-001">
+                    <div class="text-001">
+                        <h2>Inmersión Angelical</h2>
+                        <p>No se puede atravesar el mar simplemente mirando el agua.</p>
+                    </div>
+                    <div class="button-magic">
+                        <div class="butto-magic-1">
+                            <button class="magic button-1">Sitio web</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="painting-001">
+                <div class="paint-001">
+                    <img src="../../images/imgweb/angel006.jpeg" alt="primer-001">
                 </div>
                 <div class="info-001">
                     <div class="text-001">
@@ -233,24 +229,23 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="imagenes/logos/logoX.png" alt="Logo de M-x-L">
+                        <img src="../../images/logos/logoX.png" alt="Logo de M-x-L">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <h2>Sobre nosotros</h2>
-                <p>Soy un chico pasionado por la fantacia</p>
+                <h2>Sobre todo el proyecto</h2>
                 <p>Soy un chico pasionado por la fantacia</p>
             </div>
             <div class="red-socila">
                 <div>
-                    <a href="#"><img src="imagenes/logos/logo.svg" alt="yotube"></a>
+                    <a href="#"><img src="../../images/logos/logo.svg" alt="yotube"></a>
                 </div>
                 <div>
-                    <a href="#"><img src="imagenes/logos/logo1.svg" alt="yotube"></a>
+                    <a href="#"><img src="../../images/logos/logo1.svg" alt="yotube"></a>
                 </div>
                 <div>
-                    <a href="#"><img src="imagenes/logos/logo2.svg" alt="yotube"></a>
+                    <a href="#"><img src="../../images/logos/logo2.svg" alt="yotube"></a>
                 </div>
 
             </div>
@@ -259,8 +254,6 @@
             <small>&copy; 2024 <b>M-X-L</b>- Todos los Derechos Reservados</small>
 
         </div>
-
-
     </footer>
 
 </body>
