--- a/html/frontpage/frontpage.html
+++ b/html/frontpage/frontpage.html
@@ -29,7 +29,9 @@
 
     </header>
     <header class="headermobile">
-        <h1>M-X-L</h1>
+        <a href="../index.html">
+            <h1>M-X-L</h1>
+        </a>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <nav>
             <ul id="navMenu">
@@ -56,11 +58,6 @@
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
                     </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -72,11 +69,6 @@
                     <div class="text-001">
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -90,11 +82,6 @@
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
                     </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -106,11 +93,6 @@
                     <div class="text-001">
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -124,11 +106,6 @@
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
                     </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -140,11 +117,6 @@
                     <div class="text-001">
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -159,11 +131,6 @@
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
                     </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -176,11 +143,6 @@
                     <div class="text-001">
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -195,11 +157,6 @@
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
                     </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
-                    </div>
                 </div>
             </div>
 
@@ -212,11 +169,6 @@
                     <div class="text-001">
                         <h2>Inmersión Angelical</h2>
                         <p>No se puede atravesar el mar simplemente mirando el agua.</p>
-                    </div>
-                    <div class="button-magic">
-                        <div class="butto-magic-1">
-                            <button class="magic button-1">Sitio web</button>
-                        </div>
                     </div>
                 </div>
             </div>
