--- a/html/painting/galery.html
+++ b/html/painting/galery.html
@@ -53,6 +53,7 @@
     <main>
         <div>
             <section>
+                <h2>Galery</h2>
                 <img src="../../images/imgweb/angel003.jpeg" alt="">
                 <img src="../../images/imgweb/filo003.jpeg" alt="">
                 <img src="../../images/imgweb/angel004.jpeg" alt="">
@@ -65,8 +66,6 @@
         <div class="button">
             <a href="../frontpage/form.html" class="botton-redireccion">CUESTIONARIO</a>
         </div>
-
-
     </main>
 
     <footer class="pie-pagina">
